frontend implementaion (web) and more features
